Implement smart regeneration and force processing options
- Introduced `force_generation` configuration in `config.toml` and CLI flag to allow users to force regeneration of all files regardless of modification time.
- Enhanced file processing logic to include change detection, ensuring only modified files are processed, improving efficiency.
- Updated `README.md` to document new features, including smart regeneration and configuration options.
- Refactored `MarkdownProcessorV2` to support new processing logic and statistics tracking for skipped files.
- Improved error handling and logging for file processing operations.
- Added tests to validate new functionality and ensure robust processing behavior.

--- a/example_config.toml
+++ b/example_config.toml
@@ -28,6 +28,10 @@ logLevel = "INFO"
 # Default: .cbm
 cbm_dir = ".cbm"
 
+# Force regeneration of all files regardless of modification time
+# Default: false
+force_generation = false
+
 # Custom prompt for image analysis
 # Default: A general prompt for text extraction and formatting
 image_analysis_prompt = """
