Refactor image processing and enhance performance logging
- Replaced `wand` with `svglib` for SVG to PNG conversion, improving compatibility and performance.
- Updated `pyproject.toml` to reflect new dependencies including `nocairosvg`, `pillow-heif`, and `lxml`.
- Enhanced performance logging throughout the application, including detailed timing metrics for key operations such as image conversion and GPT-4o analysis.
- Revised architecture and product requirement documents to include new performance monitoring features.
- Improved error handling and logging in image processing functions.
- Updated README.md to document changes in image processing capabilities and performance metrics.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,13 @@ description = "Process Bear.app markdown files and attachments with GPT-4o visio
 authors = [{ name = "Chad Walters", email = "chad.walters@gmail.com" }]
 dependencies = [
   "openai",               # For GPT-4o vision model
-  "wand",                 # For SVG to PNG conversion
+  "nocairosvg",           # For SVG to PNG conversion
   "pillow",               # For image processing
   "toml",                 # For configuration files
-  "tqdm",                 # For progress bars
   "pandas",               # For data processing
+  "tqdm",                 # For progress bars
+  "pillow-heif",          # For HEIC/HEIF support
+  "lxml",                 # Required by svglib
   "tabulate",             # For markdown tables
   "beautifulsoup4",       # For HTML processing
   "types-beautifulsoup4", # Type stubs for beautifulsoup4
