- Add modular configuration system with `.cursor/rules/` and `.cursor/config.rules` - Introduce `RulesManager` and `ConfigManager` for flexible project configuration - Implement nested progress tracking with `ProgressManager` for files and attachments - Add `ConsoleManager` for advanced logging and console output - Update `ProcessingStats` to track detailed processing metrics - Add `--no_image` flag to skip GPT-4o vision analysis with placeholder generation - Enhance error handling and logging across processing components - Update documentation and tests to reflect new configuration and progress tracking features Please enter the commit message for your changes. Lines starting

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ htmlcov/
 .ruff_cache/
 .pdm-build/
 .benchmarks/
+.test_files/
+.cbm_test/
 
 # Nova specific
 logs/
@@ -91,3 +93,6 @@ $RECYCLE.BIN/
 
 # Local environment overrides
 .env.local
+
+# Cursor config
+.cursor/config.rules
